--- a/src/components/i18n/i18n.spec.lang.fr.json
+++ b/src/components/i18n/i18n.spec.lang.fr.json
@@ -5,6 +5,8 @@
         "with-params": "test {0}, test {1}",
         "html-encode": "{0}test{1}",
         "plural-test": "I have one yorkie!",
-        "plural-test.p": "I have many yorkies!"
+        "plural-test.p": "I have many yorkies!",
+        "modifier-test": "I am not modified!",
+        "modifier-test.m": "I am modified!"
     }
 }
