ENA2-274 - optimized StringToObject so it works recursively

--- a/src/directives/i18n/i18n.spec.lang.fr.json
+++ b/src/directives/i18n/i18n.spec.lang.fr.json
@@ -10,5 +10,11 @@
         "medaille-olympique.1.f": "La seule médaillée olympique",
         "medaille-olympique.2": "Les deux seuls médaillés olympiques",
         "medaille-olympique.2.f": "Les deux seules médaillées olympiques"
+    },
+    "exemples_avec_parametres": {
+        "decompte_athletes_olympiques_canada": "Il y a %(nbAthletes)s athlète olympique canadien.",
+        "decompte_athletes_olympiques_canada.p": "Il y a %(nbAthletes)s athlètes olympiques canadiens.",
+        "decompte_athletes_olympiques_pays": "Il y a %(nbAthletes)s athlètes olympiques et %(nbPays)s pays participants.",
+        "decompte_athletes_olympiques_pays.f": "Il y a %(nbAthletes)s femmes athlètes olympiques et %(nbPays)s pays participants."
     }
 }
