--- a/src/utils/i18n/i18n.spec.lang.fr.json
+++ b/src/utils/i18n/i18n.spec.lang.fr.json
@@ -17,6 +17,6 @@
     },
     "exemples_avec_parametres_globaux": {
         "decompte_medailles_olympiques_canada": "Les athlètes canadiens ont gagnés %(nbMedailles)s%(espace_insecable__global)smedaille.",
-        "decompte_medailles_olympiques_canada_default_formatting": "Les athlètes canadiens ont gagnés {0} medaille.",
+        "decompte_medailles_olympiques_canada_default_formatting": "Les athlètes canadiens ont gagnés {0} medaille."
     }
 }
